fix: alert floating cut on mobile

--- a/assets/scss/modules/_alert.scss
+++ b/assets/scss/modules/_alert.scss
@@ -147,7 +147,7 @@
   position: fixed;
   top: 20px;
   right: 20px;
-  max-width: 400px;
+  max-width: 370px;
   z-index: 3000;
 }
 
